--- a/config.yml
+++ b/config.yml
@@ -17,7 +17,7 @@ params:
   timezoneString: " IST"
   logo: /images/clearstatus.svg
   description_header: Information about <a class='text-grey-darkest' title='Visit
-    gnr8tr.online' href='http://www.gnr8tr.online/'>example</a> systems
+    gnr8tr.online' href='http://www.gnr8tr.online/'>Gnr8tr</a> systems
     operations.<br />Follow us <a class='text-grey-darkest' title='Visit our
     page on Twitter' href='https://twitter.com/freceipt_gnr8tr'>on Twitter</a>
     or subscribe to <a class='text-grey-darkest' href='%s' >RSS</a><br />to be
@@ -26,7 +26,7 @@ params:
   eventsPerPage: 10
   iconType: image/png
   icon: /images/clearstatus.png
-  description_footer: <a class='text-grey-darkest' title='Visit example.com'
+  description_footer: <a class='text-grey-darkest' title='Visit gnr8tr.online'
     href='http://www.gnr8tr.online/'>gnr8tr.online</a> allows you to
     create/generate/gnr8/make rent,fuel,petrol,diesel, driver salary
     receipts/bills/invoices for india.
